query data based on sensor id
