# server/humidityService.go
@@ -5,6 +5,7 @@ import (
 	log "github.com/sirupsen/logrus"
 	"github.com/tobiasjungmann/Himbeergarten_RPi/server/models"
 	pb "github.com/tobiasjungmann/Himbeergarten_RPi/server/proto"
+	"google.golang.org/protobuf/types/known/timestamppb"
 	"time"
 )
 
@@ -43,13 +44,46 @@ func (s *PlantStorage) StoreHumidityEntry(_ context.Context, request *pb.StoreHu
 }
 
 func (s *PlantStorage) getRequestedSensorStates(_ context.Context, _ *pb.GetRequestedSensorStatesRequest) (*pb.GetRequestedSensorStatesResponse, error) {
-	/*	request.DeviceId
+	var sensors []models.Sensor
+	result := s.db.Find(&sensors)
+	if result.Error != nil {
+		log.Fatalf("Error: Not able to query all sensors. Errormessage: %s", result.Error.Error())
+	}
+
+	convertedSensors := make([]*pb.RequestedSensorMsg, len(sensors))
+
+	for i, v := range sensors {
 		var plant models.Plant
-		result := s.db.Model(&models.Device{}).
-			First(&plant).
-			Where(models.Plant{Plant: request.PlantId})
-		if result.Error != nil {
-			log.WithError(result.Error).Error("Error while querying existing plants.")
-		}*/
-	return &pb.GetRequestedSensorStatesResponse{}, nil
+		err := s.db.Where(models.Plant{Sensor: v.Sensor}).First(&plant).Error
+		var id int32 = -1
+		if err == nil {
+			id = plant.Plant
+		}
+		convertedSensors[i] = &pb.RequestedSensorMsg{
+			DeviceId:       v.DeviceId,
+			SensorId:       v.Sensor,
+			SensorSlot:     v.SensorSlot,
+			InUse:          v.InUse,
+			ConnectedPlant: id,
+		}
+	}
+	return &pb.GetRequestedSensorStatesResponse{Sensors: convertedSensors}, nil
+}
+
+func (s *PlantStorage) GetDataForSensor(_ context.Context, request *pb.GetDataForSensorRequest) (*pb.GetDataForSensorReply, error) {
+	var humidityEntries []models.HumidityEntry
+
+	errHumidity := s.db.Where(models.HumidityEntry{Sensor: request.Sensor}).Find(&humidityEntries).Error
+	if errHumidity != nil {
+		log.Fatalf("Error: Plant with Id: %d unable to query Humidity entries. Errormessage: %s", request.Sensor, errHumidity.Error())
+	}
+	convertedHumidity := make([]*pb.HumidityMsg, len(humidityEntries))
+	for i, v := range humidityEntries {
+		convertedHumidity[i] = &pb.HumidityMsg{
+			Humidity:  v.HumidityEntry,
+			Timestamp: timestamppb.New(v.Timestamp),
+		}
+	}
+
+	return &pb.GetDataForSensorReply{Data: convertedHumidity}, nil
 }
