# server/proto/plantStorage.pb.gw.go
@@ -157,38 +157,20 @@ func local_request_PlantStorage_DeletePlant_0(ctx context.Context, marshaler run
 
 }
 
-var (
-	filter_PlantStorage_GetRequestedSensorStates_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
-)
-
-func request_PlantStorage_GetRequestedSensorStates_0(ctx context.Context, marshaler runtime.Marshaler, client PlantStorageClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_PlantStorage_GetConnectedSensorOverview_0(ctx context.Context, marshaler runtime.Marshaler, client PlantStorageClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq GetRequestedSensorStatesRequest
 	var metadata runtime.ServerMetadata
 
-	if err := req.ParseForm(); err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_PlantStorage_GetRequestedSensorStates_0); err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	msg, err := client.GetRequestedSensorStates(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.GetConnectedSensorOverview(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_PlantStorage_GetRequestedSensorStates_0(ctx context.Context, marshaler runtime.Marshaler, server PlantStorageServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func local_request_PlantStorage_GetConnectedSensorOverview_0(ctx context.Context, marshaler runtime.Marshaler, server PlantStorageServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq GetRequestedSensorStatesRequest
 	var metadata runtime.ServerMetadata
 
-	if err := req.ParseForm(); err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_PlantStorage_GetRequestedSensorStates_0); err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	msg, err := server.GetRequestedSensorStates(ctx, &protoReq)
+	msg, err := server.GetConnectedSensorOverview(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -243,6 +225,42 @@ func local_request_PlantStorage_GetConnectedDevicesOverview_0(ctx context.Contex
 	var metadata runtime.ServerMetadata
 
 	msg, err := server.GetConnectedDevicesOverview(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
+var (
+	filter_PlantStorage_GetDataForSensor_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_PlantStorage_GetDataForSensor_0(ctx context.Context, marshaler runtime.Marshaler, client PlantStorageClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetDataForSensorRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_PlantStorage_GetDataForSensor_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.GetDataForSensor(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_PlantStorage_GetDataForSensor_0(ctx context.Context, marshaler runtime.Marshaler, server PlantStorageServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetDataForSensorRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_PlantStorage_GetDataForSensor_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.GetDataForSensor(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -349,19 +367,19 @@ func RegisterPlantStorageHandlerServer(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
-	mux.Handle("GET", pattern_PlantStorage_GetRequestedSensorStates_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_PlantStorage_GetConnectedSensorOverview_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/smart_home.PlantStorage/GetRequestedSensorStates", runtime.WithHTTPPathPattern("/sensors"))
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/smart_home.PlantStorage/GetConnectedSensorOverview", runtime.WithHTTPPathPattern("/sensors"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_PlantStorage_GetRequestedSensorStates_0(ctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_PlantStorage_GetConnectedSensorOverview_0(ctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -369,7 +387,7 @@ func RegisterPlantStorageHandlerServer(ctx context.Context, mux *runtime.ServeMu
 			return
 		}
 
-		forward_PlantStorage_GetRequestedSensorStates_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_PlantStorage_GetConnectedSensorOverview_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -418,6 +436,30 @@ func RegisterPlantStorageHandlerServer(ctx context.Context, mux *runtime.ServeMu
 		}
 
 		forward_PlantStorage_GetConnectedDevicesOverview_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_PlantStorage_GetDataForSensor_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/smart_home.PlantStorage/GetDataForSensor", runtime.WithHTTPPathPattern("/sensors/data"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_PlantStorage_GetDataForSensor_0(ctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_PlantStorage_GetDataForSensor_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -546,24 +588,24 @@ func RegisterPlantStorageHandlerClient(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
-	mux.Handle("GET", pattern_PlantStorage_GetRequestedSensorStates_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_PlantStorage_GetConnectedSensorOverview_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/smart_home.PlantStorage/GetRequestedSensorStates", runtime.WithHTTPPathPattern("/sensors"))
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/smart_home.PlantStorage/GetConnectedSensorOverview", runtime.WithHTTPPathPattern("/sensors"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_PlantStorage_GetRequestedSensorStates_0(ctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_PlantStorage_GetConnectedSensorOverview_0(ctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_PlantStorage_GetRequestedSensorStates_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_PlantStorage_GetConnectedSensorOverview_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -609,6 +651,27 @@ func RegisterPlantStorageHandlerClient(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
+	mux.Handle("GET", pattern_PlantStorage_GetDataForSensor_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/smart_home.PlantStorage/GetDataForSensor", runtime.WithHTTPPathPattern("/sensors/data"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_PlantStorage_GetDataForSensor_0(ctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_PlantStorage_GetDataForSensor_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -621,11 +684,13 @@ var (
 
 	pattern_PlantStorage_DeletePlant_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"plant", "delete"}, ""))
 
-	pattern_PlantStorage_GetRequestedSensorStates_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"sensors"}, ""))
+	pattern_PlantStorage_GetConnectedSensorOverview_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"sensors"}, ""))
 
 	pattern_PlantStorage_StoreHumidityEntry_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"humidity", "new"}, ""))
 
 	pattern_PlantStorage_GetConnectedDevicesOverview_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"devices"}, ""))
+
+	pattern_PlantStorage_GetDataForSensor_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"sensors", "data"}, ""))
 )
 
 var (
@@ -637,9 +702,11 @@ var (
 
 	forward_PlantStorage_DeletePlant_0 = runtime.ForwardResponseMessage
 
-	forward_PlantStorage_GetRequestedSensorStates_0 = runtime.ForwardResponseMessage
+	forward_PlantStorage_GetConnectedSensorOverview_0 = runtime.ForwardResponseMessage
 
 	forward_PlantStorage_StoreHumidityEntry_0 = runtime.ForwardResponseMessage
 
 	forward_PlantStorage_GetConnectedDevicesOverview_0 = runtime.ForwardResponseMessage
+
+	forward_PlantStorage_GetDataForSensor_0 = runtime.ForwardResponseMessage
 )
